--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "open-r1",
     "torch>=2.6.0",
     "torchvision>=0.21.0",
+    "transformers>=4.52.0.dev0",
     "verl",
     "vllm>=0.8.3",
 ]
